--- a/Task 1/index.html
+++ b/Task 1/index.html
@@ -36,8 +36,8 @@
                 nec.
             </p>
         </section>
-        <section class="column-layout">
-            <div class="column-cotent">
+        <section class="columnlayout">
+            <div class="columncontent">
                 <h2>Heading</h2>
                 <p>Montes ridiculus mus tellus nunc vulputate. Cras facilisi congue et facilisis porttitor litora etiam
                     praesent porttitor. Sollicitudin cubilia scelerisque diam taciti lacus. Dapibus penatibus augue
@@ -118,15 +118,23 @@
             </div>
         </section>
         <section class="gridimages">
-            <img src="assets/all-encores.jpg" alt="">
-            <img src="assets/articulation.jpg" alt="">
-            <img src="assets/blurred.jpg" alt="">
-            <img src="assets/encores-2.jpg" alt="">
-            <img src="assets/eulogy-for-evolution.jpg" alt="">
+            <img src="assets/all-encores.jpg" alt="featured album">
+            <img src="assets/articulation.jpg" alt="album cover">
+            <img src="assets/blurred.jpg" alt="album cover">
+            <img src="assets/encores-2.jpg" alt="album cover">
+            <img src="assets/eulogy-for-evolution.jpg" alt="album cover">
         </section>
         <section class="author">
-            <h2>The Author</h2>
+            <div class="authorcontent">
+                <h2>The Author</h2>
+                <p>Sapien leo scelerisque per convallis torquent nunc. Lobortis eleifend a nam sit turpis nostra. Tempus
+                    suspendisse libero curae faucibus lobortis litora bibendum praesent! Eget quam magna, diam commodo
+                    interdum sapien magnis.</p>
+            </div>
             <img src="assets/profile_picture.jpg" alt="">
+        </section>
+        <section class="footer">
+            <h3>Copyright @ 2024 Rafael Paraiso</h3>
         </section>
     </main>
 
