--- a/Task 1/index.html
+++ b/Task 1/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Erased Tapes</title>
     <link rel="stylesheet" href="style.css">
     <link rel="script" href="script.js">
     <link rel="preconnect" href="https://fonts.googleapis.com">
