--- a/Task 2/index.html
+++ b/Task 2/index.html
@@ -1,13 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WatchIt</title>
     <link rel="stylesheet" href="style.css">
     <link rel="script" href="script.js">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Teko:wght@300..700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    
+    <header class="nav">
+        <h1>watch.it</h1>
+        <ul>
+            <li><a href="Action">Action</a></li>
+            <li><a href="Comedy">Comedy</a></li>
+            <li><a href="Romance">Romance</a></li>
+            <li><a href="Drama">Drama</a></li>
+        </ul>
+        <button class="search">SEARCH</button>
+    </header>
+    <main>
+        <div class="grid">
+            <div class="gridcontent">
+                <img src="assets/who-framed-roger-rabbit.jpg" alt="">
+                <h1>Who Framed Roger Rabbit (1988)</h1>
+                <p>In a world where cartoons and humans coexist, a detective must solve a zany, high-stakes mystery.
+                    Packed with wild humor, groundbreaking animation, and noir twists, this unique film will pull you
+                    into a world where anything is possible!
+                </p>
+                <button class="watchnow">WATCH NOW</button>
+            </div>
+            <div class="gridcontent">
+                <img src="assets/hook.jpg" alt="">
+                <h1>Hook (1991)</h1>
+                <p>Rediscover Neverland in this thrilling twist on Peter Pan! Robin Williams stars as a grown-up Peter,
+                    who must rediscover his inner child to rescue his kids from the clutches of Captain Hook. Adventure,
+                    magic, and nostalgia blend in this timeless family classic.
+                </p>
+                <button class="watchnow">WATCH NOW</button>
+            </div>
+            <div class="gridcontent">
+                <img src="assets/la-la-land.jpg" alt="">
+                <h1>La La Land (2016)</h1>
+                <p>Love, dreams, and the magic of LA take center stage in this musical masterpiece. Watch as two
+                    starry-eyed artists navigate passion and ambition in a world where every moment feels like a
+                    cinematic spectacle!
+                </p>
+                <button class="watchnow">WATCH NOW</button>
+            </div>
+            <div class="gridcontent">
+                <img src="assets/hidden-figures.jpg" alt="">
+                <h1>Hidden Figures (2016)</h1>
+                <p>Three unsung heroes of NASA's space race take the spotlight in this inspiring true story. Battling
+                    discrimination and defying the odds, these brilliant African-American women prove that intelligence,
+                    perseverance, and unity can change history and break barriers.
+                </p>
+                <button class="watchnow">WATCH NOW</button>
+            </div>
+            <div class="gridcontent">
+                <img src="assets/palm-springs.jpg" alt="">
+                <h1>Palm Springs (2020)</h1>
+                <p>A never-ending wedding day turns into an unforgettable time-loop romance! Stuck in the same day, two
+                    strangers find love, chaos, and meaning in the most unexpected ways.
+                </p>
+                <button class="watchnow">WATCH NOW</button>
+            </div>
+            <div class="gridcontent">
+                <img src="assets/barbie.jpg" alt="">
+                <h1>Barbie (2023)</h1>
+                <p>Step into the dazzling world of Barbie as she embarks on an unexpected journey from her perfect doll
+                    life to the real world. Filled with humor, heart, and empowering messages, this vibrant adventure
+                    redefines what it means to dream big!
+                </p>
+                <button class="watchnow">WATCH NOW</button>
+            </div>
+        </div>
+    </main>
 </body>
+
 </html>
