--- a/Task 2/index.html
+++ b/Task 2/index.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WatchIt</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="script" href="script.js">
+    <link rel="stylesheet" href="sass.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -18,7 +17,7 @@
         rel="stylesheet">
 </head>
 
-<body>
+<body class="body">
     <header class="nav">
         <h1>watch.it</h1>
         <ul>
