--- a/Task 1/index.html
+++ b/Task 1/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Erased Tapes</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="sass.css">
     <link rel="script" href="script.js">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
