--- a/Task 2/index.html
+++ b/Task 2/index.html
@@ -44,7 +44,7 @@
                             into a world where anything is possible!
                         </p>
                     </div>
-                    <button class="watchnow">WATCH NOW</button>
+                    <button class="watchnow"><span class="watch">WATCH </span> <span class="now">NOW</span></button>
                 </div>
             </div>
 
