--- a/Task 1/index.html
+++ b/Task 1/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Erased Tapes</title>
     <link rel="stylesheet" href="sass.css">
-    <link rel="script" href="script.js">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Protest+Guerrilla&display=swap" rel="stylesheet">
@@ -15,125 +14,135 @@
 </head>
 
 <body>
+    <!-- Header section containing the site logo -->
     <header>
-        <img src="assets/logo.svg" alt="">
+        <!-- Logo image in SVG format located in the assets folder -->
+        <img src="assets/logo.svg" alt="Site Logo">
     </header>
+
+    <!-- Navigation bar for quick links to main sections of the website -->
     <div class="navbar">
         <ul>
+            <!-- Links to different sections like "Our Blog", "Our Artists", and "Our Story" -->
             <li><a href="OurBlog">Our Blog</a></li>
             <li><a href="OurArtists">Our Artists</a></li>
             <li><a href="OurStory">Our Story</a></li>
         </ul>
     </div>
+
     <main>
+        <!-- Top section with a primary heading, subtitle, and an introductory paragraph -->
         <section class="topsection">
+            <!-- Main title for the website -->
             <h1>Erased Tapes:</h1>
+            <!-- Subtitle to describe the theme or focus of the site -->
             <h2>Exploring the Sonic Frontier</h2>
+            <!-- Introductory text providing an overview of the website or theme -->
             <p>Lorem ipsum odor amet, consectetuer adipiscing elit. Mi eu scelerisque turpis posuere tempor? Leo
-                condimentum
-                himenaeos molestie elit; maximus iaculis proin nulla. Ullamcorper nibh cras conubia suscipit dapibus
-                sagittis, facilisi habitant vivamus. Etiam fusce posuere himenaeos ipsum commodo sollicitudin himenaeos
-                nec.
+                condimentum himenaeos molestie elit; maximus iaculis proin nulla. Ullamcorper nibh cras conubia suscipit
+                dapibus sagittis, facilisi habitant vivamus. Etiam fusce posuere himenaeos ipsum commodo sollicitudin
+                himenaeos nec.
+
             </p>
         </section>
+
+        <!-- Section with a column layout containing multiple headings and paragraphs -->
         <section class="columnlayout">
             <div class="columncontent">
+                <!-- Heading for content section -->
                 <h2>Heading</h2>
+                <!-- First paragraph of content with example placeholder text -->
                 <p>Montes ridiculus mus tellus nunc vulputate. Cras facilisi congue et facilisis porttitor litora etiam
                     praesent porttitor. Sollicitudin cubilia scelerisque diam taciti lacus. Dapibus penatibus augue
-                    dapibus
-                    sagittis; rhoncus accumsan. Accumsan urna et, ultrices placerat justo rutrum. Tristique mattis ante
-                    cras
-                    accumsan convallis phasellus fermentum magna. Rhoncus curabitur pharetra proin ante nam adipiscing
-                    accumsan hac. Rutrum efficitur nullam integer ut ex id. Pulvinar vel at vestibulum vivamus sed
-                    nascetur
-                    eget.
+                    dapibus sagittis; rhoncus accumsan. Accumsan urna et, ultrices placerat justo rutrum. Tristique
+                    mattis ante cras accumsan convallis phasellus fermentum magna. Rhoncus curabitur pharetra proin ante
+                    nam adipiscing accumsan hac. Rutrum efficitur nullam integer ut ex id. Pulvinar vel at vestibulum
+                    vivamus sed nascetur eget.
                     <br><br>
                     Laoreet volutpat hendrerit est aliquam; fusce quam tempor. Nisi interdum praesent pellentesque non
-                    non
-                    blandit cubilia et. Aptent maximus vehicula nullam odio tempor. Placerat dis facilisis potenti
-                    iaculis,
-                    primis vivamus nec at magnis. Aadipiscing curabitur vestibulum imperdiet dolor primis. Inceptos
-                    penatibus inceptos eu habitasse aptent vehicula platea litora congue. Ultricies mauris fringilla
-                    rhoncus
-                    pharetra iaculis vitae. Venenatis himenaeos eget molestie dignissim consectetur tellus litora. Porta
-                    a
-                    iaculis mi primis rhoncus.
+                    non blandit cubilia et. Aptent maximus vehicula nullam odio tempor. Placerat dis facilisis potenti
+                    iaculis, primis vivamus nec at magnis. Aadipiscing curabitur vestibulum imperdiet dolor primis.
+                    Inceptos penatibus inceptos eu habitasse aptent vehicula platea litora congue. Ultricies mauris
+                    fringilla rhoncus pharetra iaculis vitae. Venenatis himenaeos eget molestie dignissim consectetur
+                    tellus litora. Porta a iaculis mi primis rhoncus.
                     <br><br>
                     Curae habitasse elementum amet nunc, natoque at. Tortor vel blandit sociosqu auctor aliquam maximus
                     porta feugiat. Eros phasellus platea mauris condimentum natoque hendrerit tellus id. Ex imperdiet
-                    vitae
-                    maximus adipiscing neque quam tempor orci. Lobortis porta lacinia cubilia tellus vel placerat;
-                    facilisis
-                    mi euismod. Neque eu orci nulla penatibus elit nec.
+                    vitae maximus adipiscing neque quam tempor orci. Lobortis porta lacinia cubilia tellus vel placerat;
+                    facilisis mi euismod. Neque eu orci nulla penatibus elit nec.
                     <br><br>
                     Parturient habitasse facilisis purus donec, enim platea maximus. Primis class varius augue sed class
                     ultricies. Posuere curabitur tristique penatibus montes hac ac imperdiet. Risus per sociosqu, cursus
-                    leo
-                    condimentum ac fringilla. Nibh curabitur eros tempus nec; nam curae hendrerit. Mattis placerat
-                    maximus
-                    mollis praesent, eros adipiscing dui.
+                    leo condimentum ac fringilla. Nibh curabitur eros tempus nec; nam curae hendrerit. Mattis placerat
+                    maximus mollis praesent, eros adipiscing dui.
                     <br><br>
                 </p>
+
+                <!-- Additional content sections with headings and placeholder text paragraphs -->
                 <h2>Heading</h2>
                 <p>Habitasse ornare fames facilisis montes pulvinar habitasse fringilla. Risus porta cursus duis vivamus
                     quam adipiscing nec. Ante at posuere eget aptent natoque vivamus ante. Aenean enim dapibus viverra
-                    sem
-                    efficitur. Felis nam semper integer justo in. Facilisi augue urna torquent lacinia facilisi
-                    inceptos.
-                    Natoque varius feugiat massa scelerisque natoque, cras tempor inceptos.
-                    <br><br>
+                    sem efficitur. Felis nam semper integer justo in. Facilisi augue urna torquent lacinia facilisi
+                    inceptos. Natoque varius feugiat massa scelerisque natoque, cras tempor inceptos.
                     Amet ac leo, imperdiet hac litora auctor. Suscipit congue duis sociosqu auctor euismod vivamus urna
                     diam. Nunc enim himenaeos litora facilisi, tincidunt torquent. Eros sapien laoreet duis, volutpat
-                    rutrum
-                    pulvinar. Natoque semper sapien aptent quis habitant aliquam condimentum luctus. Tempus pellentesque
-                    congue varius dapibus pharetra. Fermentum diam auctor bibendum rhoncus leo. Vestibulum tincidunt
-                    fames
-                    convallis ligula semper porttitor.
+                    rutrum pulvinar. Natoque semper sapien aptent quis habitant aliquam condimentum luctus. Tempus
+                    pellentesque congue varius dapibus pharetra. Fermentum diam auctor bibendum rhoncus leo. Vestibulum
+                    tincidunt fames convallis ligula semper porttitor.
                     <br><br>
                     Magnis maximus morbi, litora accumsan vivamus facilisi etiam pharetra. Platea congue orci sagittis
-                    purus
-                    scelerisque. Velit taciti maecenas praesent nam lobortis metus vehicula habitasse porttitor. Porta
-                    gravida placerat lobortis litora elit feugiat venenatis. Cras magna himenaeos consequat aliquet ad
-                    nec
-                    pharetra. Ligula eleifend imperdiet aptent primis placerat. Nec magnis tempus vulputate ipsum ad
-                    sagittis mus.
+                    purus scelerisque. Velit taciti maecenas praesent nam lobortis metus vehicula habitasse porttitor.
+                    Porta gravida placerat lobortis litora elit feugiat venenatis. Cras magna himenaeos consequat
+                    aliquet ad nec pharetra. Ligula eleifend imperdiet aptent primis placerat. Nec magnis tempus
+                    vulputate ipsum ad sagittis mus.
+                    <br><br>
                 </p>
+
+                <!-- Final section with heading and paragraph in this column layout -->
                 <h2>Heading</h2>
                 <p>Vulputate nullam tempus montes eu tellus integer adipiscing pulvinar. Pharetra eu luctus id a
-                    potenti.
-                    Pulvinar egestas conubia ante varius lobortis iaculis metus. Netus sem imperdiet hendrerit vehicula
-                    netus est gravida tortor. Nunc ridiculus per montes nulla, facilisis lacinia per leo. Hendrerit
-                    scelerisque nulla in suspendisse sit tortor sagittis. Suscipit dictumst ipsum laoreet cras egestas
-                    suscipit orci. Per molestie felis erat platea blandit commodo.
+                    potenti. Pulvinar egestas conubia ante varius lobortis iaculis metus. Netus sem imperdiet hendrerit
+                    vehicula netus est gravida tortor. Nunc ridiculus per montes nulla, facilisis lacinia per leo.
+                    Hendrerit scelerisque nulla in suspendisse sit tortor sagittis. Suscipit dictumst ipsum laoreet cras
+                    egestas suscipit orci. Per molestie felis erat platea blandit commodo.
                     <br><br>
                     Ad venenatis sapien habitant posuere donec porttitor vel nisi. Sodales laoreet donec diam rhoncus
-                    lectus
-                    euismod orci torquent curae. Fames rhoncus torquent sed convallis; potenti cras. Dictumst arcu
-                    libero
-                    nulla malesuada mi ridiculus platea. Interdum ullamcorper fringilla himenaeos mollis; in arcu
-                    pharetra
-                    massa. Nunc mauris taciti montes sapien molestie orci ac quis.
+                    lectus euismod orci torquent curae. Fames rhoncus torquent sed convallis; potenti cras. Dictumst
+                    arcu libero nulla malesuada mi ridiculus platea. Interdum ullamcorper fringilla himenaeos mollis; in
+                    arcu pharetra massa. Nunc mauris taciti montes sapien molestie orci ac quis.
+                    <br><br>
                 </p>
             </div>
         </section>
+
+        <!-- Grid section for displaying images, such as album covers or related visuals -->
         <section class="gridimages">
+            <!-- Images with alt attributes to describe each one -->
             <img src="assets/all-encores.jpg" alt="featured album">
             <img src="assets/articulation.jpg" alt="album cover">
             <img src="assets/blurred.jpg" alt="album cover">
             <img src="assets/encores-2.jpg" alt="album cover">
             <img src="assets/eulogy-for-evolution.jpg" alt="album cover">
         </section>
+
+        <!-- Section for author information with text description and profile picture -->
         <section class="author">
             <div class="authorcontent">
+                <!-- Title indicating the section is about the author -->
                 <h2>The Author</h2>
+                <!-- Short bio or description text about the author -->
                 <p>Sapien leo scelerisque per convallis torquent nunc. Lobortis eleifend a nam sit turpis nostra. Tempus
                     suspendisse libero curae faucibus lobortis litora bibendum praesent! Eget quam magna, diam commodo
-                    interdum sapien magnis.</p>
+                    interdum sapien magnis.
+                </p>
             </div>
-            <img src="assets/profile_picture.jpg" alt="">
+            <!-- Author's profile picture -->
+            <img src="assets/profile_picture.jpg" alt="Author's Profile Picture">
         </section>
+
+        <!-- Footer section with copyright information -->
         <section class="footer">
+            <!-- Text showing copyright information and year -->
             <h3>Copyright @ 2024 Rafael Paraiso</h3>
         </section>
     </main>
