--- a/Task 1/index.html
+++ b/Task 1/index.html
@@ -36,7 +36,7 @@
             <!-- Main title for the website -->
             <h1>Erased Tapes:</h1>
             <!-- Subtitle to describe the theme or focus of the site -->
-            <h2>Exploring the Sonic Frontier</h2>
+            <span class="subheader"><p>Exploring the Sonic Frontier</p></span>
             <!-- Introductory text providing an overview of the website or theme -->
             <p>Lorem ipsum odor amet, consectetuer adipiscing elit. Mi eu scelerisque turpis posuere tempor? Leo
                 condimentum himenaeos molestie elit; maximus iaculis proin nulla. Ullamcorper nibh cras conubia suscipit
