--- a/Task 1/index.html
+++ b/Task 1/index.html
@@ -143,7 +143,7 @@
         <!-- Footer section with copyright information -->
         <section class="footer">
             <!-- Text showing copyright information and year -->
-            <h3>Copyright @ 2024 Rafael Paraiso</h3>
+            <h3>Copyright @ 2023 Erased Disks Ltd.</h3>
         </section>
     </main>
 
