bonus task updates

--- a/Class Activities/Grid Activity/Grid Activity.html
+++ b/Class Activities/Grid Activity/Grid Activity.html
@@ -1,21 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grid Picture Activity</title>
-    <link rel="stylesheet" href="style.css" class="">
+    <link rel="stylesheet" href="sass.css" class="">
 </head>
+
 <body>
     <div class="container">
-        <div class="image"><img src="1 (1).jpg" alt=""></div>
-        <div class="image"><img src="2 (1).jpg" alt=""></div>
-        <div class="image"><img src="3.jpg" alt=""></div>
-        <div class="image"><img src="4 (1).jpg" alt=""></div>
-        <div class="image"><img src="5.jpg" alt=""></div>
-        <div class="image"><img src="6.jpg" alt=""></div>
-        <div class="image"><img src="7.jpg" alt=""></div>
-        <div class="image"><img src="8.jpg" alt=""></div>
+        <div class="moviecontainer">
+            <img src="1.jpg" alt="">
+            <div class="text">
+                <h1>Nike Air Force 1 (Green)</h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente minima, labore inventore corporis
+                    debitis obcaecati sint, a error, aspernatur nulla magnam rerum incidunt quaerat quae sit similique
+                    ipsum ratione eos.</p>
+            </div>
+        </div>
+        <div class="moviecontainer">
+            <img src="2.jpg" alt="">
+            <div class="text">
+                <h1>Nike Air Force 1 (White)</h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente minima, labore inventore corporis
+                    debitis obcaecati sint, a error, aspernatur nulla magnam rerum incidunt quaerat quae sit similique
+                    ipsum ratione eos.</p>
+            </div>
+        </div>
+        <div class="moviecontainer">
+            <img src="3.jpg" alt="">
+            <div class="text">
+                <h1>Nike Dunk Low (Oreo)</h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente minima, labore inventore corporis
+                    debitis obcaecati sint, a error, aspernatur nulla magnam rerum incidunt quaerat quae sit similique
+                    ipsum ratione eos.</p>
+            </div>
+        </div>
+        <div class="moviecontainer">
+            <img src="4.jpg" alt="">
+            <div class="text">
+                <h1>Nike Court Vision Low</h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente minima, labore inventore corporis
+                    debitis obcaecati sint, a error, aspernatur nulla magnam rerum incidunt quaerat quae sit similique
+                    ipsum ratione eos.</p>
+            </div>
+        </div>
+
+        <div class="moviecontainer">
+            <img src="5.jpg" alt="">
+            <div class="text">
+                <h1>Nike Dunk Low (Retro)</h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente minima, labore inventore corporis
+                    debitis obcaecati sint, a error, aspernatur nulla magnam rerum incidunt quaerat quae sit similique
+                    ipsum ratione eos.</p>
+            </div>
+        </div>
+
+        <div class="moviecontainer">
+            <img src="6.jpg" alt="">
+            <div class="text">
+                <h1>Kobe 6 Protro</h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente minima, labore inventore corporis
+                    debitis obcaecati sint, a error, aspernatur nulla magnam rerum incidunt quaerat quae sit similique
+                    ipsum ratione eos.</p>
+            </div>
+        </div>
+
+        <div class="moviecontainer">
+            <img src="7.jpg" alt="">
+            <div class="text">
+                <h1>Air Max Alpha Trainer</h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente minima, labore inventore corporis
+                    debitis obcaecati sint, a error, aspernatur nulla magnam rerum incidunt quaerat quae sit similique
+                    ipsum ratione eos.</p>
+            </div>
+        </div>
+
+        <div class="moviecontainer">
+            <img src="8.jpg" alt="">
+            <div class="text">
+                <h1>Nike Air Max 1 Essential</h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente minima, labore inventore corporis
+                    debitis obcaecati sint, a error, aspernatur nulla magnam rerum incidunt quaerat quae sit similique
+                    ipsum ratione eos.</p>
+            </div>
+        </div>
     </div>
 </body>
+
 </html>
